--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Painting</title>
+        <title>Hello Blocky World</title>
         <style>
             body {text-align:left;}
             h3 {
@@ -27,24 +27,12 @@
         <script src="Shapes/Circle.js"></script>
         <script src="Shapes/Cube.js"></script>
         <script src="Shapes/Cylinder.js"></script>
-        <script src="asg2.js"></script>
+        <script src="Utility//Camera.js"></script>
+        <script src="Utility//Scene.js"></script>
+        <script src="asg3.js"></script>
 
-        <h3>Introducing... <br>
-            The Scariest Creatue Imaginable</h1>
-        <br>
-        <input type="button" value="Toggle Animation" id="animationBool">
-        <br><br> Prepare your creature
         <br>
         Camera Angle <input type="range" min="0" max="359" value="90" class="slider" id="angleSlide">
-        <br>
-        Leg Evilness Level<input type="range" min="-125" max="65" value="0" class="slider" id="3rdlimb">
-        <br>
-        Feet Evilness Level<input type="range" min="-10" max="35" value="0" class="slider" id="2ndlimb">
-        <br>
-        "Boo" Speed <input type="range" min="1" max="15" value="8" class="slider" id="booSpeed">
-        <br><br>
-        Shift + Click to change predator vs prey mode -> keep animation on!<br>
-        Chase your prey <input type="range" min="-90" max="90" value="0" class="slider" id="1stlimb">
 
         <br>
         <span id="fps">--</span> FPS
